--- a/examples/encore/package.json
+++ b/examples/encore/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@prisma/client": "^5.22.0",
         "better-auth": "1.2.1-beta.6",
+        "encore-better-auth": "link:../../packages/encore-better-auth",
         "encore.dev": "^1.46.3",
         "zod": "^3.24.2",
         "zod-to-ts": "^1.2.0"
