--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@solarsoft0/encore-better-auth-root",
     "private": true,
     "type": "module",
-    "version": "0.0.2-beta.8",
+    "version": "0.0.1",
     "packageManager": "pnpm@9.15.0",
     "scripts": {
         "build": "turbo --filter \"./packages/*\" build",
@@ -26,6 +26,7 @@
         "bumpp": "^9.8.1",
         "cross-env": "^7.0.3",
         "dotenv-cli": "^7.4.4",
+        "encore-better-auth": "^0.1.0",
         "simple-git-hooks": "^2.11.1",
         "taze": "^0.18.0",
         "tinyglobby": "^0.2.10",
@@ -33,7 +34,6 @@
         "typescript": "^5.7.2"
     },
     "pnpm": {
-        "overrides": {
-        }
+        "overrides": {}
     }
 }
