--- a/examples/encore/package.json
+++ b/examples/encore/package.json
@@ -19,8 +19,7 @@
         "better-call": "^1.0.4",
         "encore-better-auth": "link:../../packages/encore-better-auth",
         "encore.dev": "^1.46.6",
-        "zod": "^3.24.2",
-        "zod-to-ts": "^1.2.0"
+        "zod": "^3.24.2"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "^4.13.0"
